# tanach-experiments

./: .gitignore  AUTHORS.md  IDEAS.md  README.md  WORKING-NOTES.md  gematria-hilight.html  gulpfile.js  index.html  letters-palette.html  package.json  ratio-draw.html  sound-buffer.html  sound-instrument.html  word-hilight.html
.github/workflows/: ci.yml  pages.yml  release.yml
css/: styles.css
js/: image-generator.min.js  tanach-core.min.js  tanach-modules.min.js
media/tanach/: divreihayamimii.json  shmot.json  yishayahu.json  zechariah.json
media/tanach/books/: ezra.json  ovadiah.json
media/tanach/letters/: letters.json
shaders/: default.frag  default.vert  letters-palette.frag  ratio.frag  value-match.frag
src/: gematria-hilight.html  letters-palette.html  ratio-draw.html  rgba-letters.html
src/css/: styles.css
src/html/: image-generator-template.html  index.html  tanach-viewer-template.html
src/html/module-templates/: gematria-hilight.html  letters-palette.html  ratio-draw.html  rgba-letters.html  sound-buffer.html  sound-instrument.html  word-hilight.html
src/js/core/: tanach-experiments-core.js
src/js/core/books/: Books.js
src/js/tanachviewer/: AlphaImage.js  TANACHVIEWER.js  TempTest.js
src/media/tanach/: amos.json  daniel.json  esther.json  iyov.json  mishlei.json  nachum.json  shoftim.json  tehillim.json  yirmiyahu.json  yoel.json  yonah.json
src/shaders/: default.frag  default.vert  gematria-hilight.frag  letters-palette.frag
utils/calculations/: Cargo.toml  README.md  build.rs  install.ps1  install.sh
utils/calculations/src/: commands.rs  data.rs  gematria.rs  main.rs  output.rs  search.rs  tanach.rs
utils/write2csv/: Cargo.toml
utils/write2csv/src/: constants.rs  main.rs  types.rs
(+57 files in other folders)
