[package]
name = "write2csv"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
csv = "1.1.2"